[package]
name = "scout"
version = "0.1.0"
authors = ["Sam Stelfox <sstelfox@bedroomprogrammers.net>"]

[dependencies]
actix = "^0.7"
actix-web = { version = "^0.7", default-features = false }

dotenv = "^0.13"
env_logger = "^0.5"
log = "^0.4"

serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"

diesel = { version = "^1.3", features = ["postgres"] }
