[package]
name = "scout"
version = "0.1.0"
authors = ["Sam Stelfox <sstelfox@bedroomprogrammers.net>"]

[dependencies]
gotham = "0.3"
hyper = "0.12"
mime = "0.3.13"

dotenv = { version = "^0.13", default-features = false }
env_logger = "^0.5"
log = "^0.4"

serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
